--- a/templates/pages/custom/product/cpd-product.html
+++ b/templates/pages/custom/product/cpd-product.html
@@ -68,7 +68,7 @@ product:
                             <tbody>
                                  <tr>
                                     <td class="sticky-col">
-                                        <a href="/content/2110a_4364b_TDB.pdf">
+                                        <a href="/content/2110a_4364b_TDB.pdf" target="_blank">
                                             4364B HARDENER
                                         </a>
                                     </td>
@@ -98,7 +98,7 @@ product:
                                 </tr>
                                 <tr>
                                     <td class="sticky-col">
-                                        <a href="/content/2110a_9287b_TDB.pdf">
+                                        <a href="/content/2110a_9287b_TDB.pdf" target="_blank">
                                             9287B HARDENER
                                         </a>
                                     </td>
@@ -128,7 +128,7 @@ product:
                                 </tr>
                                 <tr>
                                     <td class="sticky-col">
-                                        <a href="/content/2110a_9292b_TDB.pdf">
+                                        <a href="/content/2110a_9292b_TDB.pdf" target="_blank">
                                             9292B HARDENER
                                         </a>
                                     </td>
@@ -158,7 +158,7 @@ product:
                                 </tr>
                                 <tr>
                                     <td class="sticky-col">
-                                        <a href="/content/2110a_9380b_TDB.pdf">
+                                        <a href="/content/2110a_9380b_TDB.pdf" target="_blank">
                                             9380B HARDENER
                                         </a>
                                     </td>
