--- a/templates/components/custom/products/cpd/2110A/product-view.html
+++ b/templates/components/custom/products/cpd/2110A/product-view.html
@@ -181,7 +181,7 @@
 
                 <div class="productView-options-wrap" data-product-option-change style="display:none;">
                     {{#if product.options}}
-                    <div class="productView-options-inner">
+                    <div class="productView-options-inner cpd-options-inner">
                         {{#each product.options}}
                         {{{dynamicComponent 'components/products/options'}}}
                         {{/each}}
