--- a/templates/pages/custom/product/cpd-product.html
+++ b/templates/pages/custom/product/cpd-product.html
@@ -213,9 +213,10 @@ product:
                             <input id="phone" name="phone" type="tel" required>
                         </p>
                     </div>
-                    <p>
-                        <label for="partB">Part B:*</label>
-                        <select id="partB" name="part_b" required></select>
+                    <p class="partBForm-list">
+                        <label>Part B Hardener:*</label>
+                        <p id="partBForm-error" style="display: none;">Please select at least one product.</p>
+                        <div id="partBForm-checkboxList"></div>
                     </p>
                     <p>
                         <label for="message">Message:</label>
@@ -232,24 +233,45 @@ product:
                         const partBFormSelect = document.getElementById("partB");
                         // grab the form
                         const form = document.getElementById("partBForm");
+                        // grab the form section to append the checkboxes
+                        const checkboxList = document.getElementById("partBForm-checkboxList");
 
                         // loop over the options from the part b dropdown
                         for (const option of Array.from(partBOptions)) {
                             // if no value, skip this option
                             if (!option.value) continue;
-                            // create a new option
-                            const newOption = document.createElement("option");
-                            // set the value to the options inner text
-                            newOption.value = option.innerText;
-                            // set the option's inner text
-                            newOption.innerText = option.innerText;
-                            // add the option to the form select dropdown
-                            partBFormSelect.appendChild(newOption);
+                            // create a new wrapper to hold the label and checkbox
+                            const newCheckboxWrapper = document.createElement("div");
+                            newCheckboxWrapper.className = "partBForm-checkboxWrapper";
+                            // create a new label
+                            const newLabel = document.createElement("label");
+                            newLabel.innerText = option.innerText;
+                            newLabel.setAttribute("for", option.innerText.replace(" ", "_"));
+                            // create a new checkbox input
+                            const newCheckbox = document.createElement("input");
+                            newCheckbox.id = option.innerText.replace(" ", "_");
+                            newCheckbox.className = "partBForm-checkbox";
+                            newCheckbox.value = option.innerText;
+                            newCheckbox.type = "checkbox";
+                            // append the checkbox and label to the checkbox wrapper
+                            newCheckboxWrapper.appendChild(newCheckbox);
+                            newCheckboxWrapper.appendChild(newLabel);
+                            // append the checkbox wrapper to the checkbox list
+                            checkboxList.appendChild(newCheckboxWrapper);
                         }
 
                         // when the form is submitted
                         form.addEventListener("submit", function(e) {
                             e.preventDefault();
+
+                            const selectedPartBs = Array.from(document.querySelectorAll(".partBForm-checkbox")).filter(checkbox => checkbox.checked);
+
+                            if (selectedPartBs.length === 0) {
+                                document.getElementById("partBForm-error").style.display = "block";
+                                return;
+                            }
+
+                            document.getElementById("partBForm-error").style.display = "none";
 
                             // grab the data from the form
                             const data = {
@@ -258,7 +280,7 @@ product:
                                 email: document.getElementById("email").value,
                                 phone: document.getElementById("phone").value,
                                 part_a: "{{product.title}}",
-                                part_b: document.getElementById("partB").value,
+                                part_b: selectedPartBs.map(input => input.nextElementSibling.innerText),
                                 message: document.getElementById("message").value
                             }
 
