--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -81,16 +81,16 @@
         if ("{{template_file}}".includes("product")) {
             // callback function for the observer to call
             const callback = (mutationList, observer) => {
-                // if the "not purchasable" flag is visible
-                if(mutationList[0].target.style.display !== "none") {
+                // if the quantity input is disabled (variant isn't purchasable)
+                if(mutationList[0].target.disabled) {
                     // change the price label
                     document.querySelectorAll(".price").forEach(price => price.innerText = "CALL FOR PRICE");
                 }
             };
             // create an observer to listen for mutations and call the callback function on mutate
             const observer = new MutationObserver(callback);
-            // observe the "not purchasable" flag to mutate on attribute change (style attribute changes visibility)
-            observer.observe(document.querySelector(".productAttributes-message"), { attributes: true });
+            // observe the quantity input to mutate on attribute change (style attribute changes visibility)
+            observer.observe(document.getElementById("qty[]"), { attributes: true });
         }
     </script>
 </html>
