--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -84,7 +84,7 @@
                 // if the quantity input is disabled (variant isn't purchasable)
                 if(mutationList[0].target.disabled) {
                     // change the price label
-                    document.querySelectorAll(".price").forEach(price => price.innerText = "CALL FOR PRICE");
+                    document.querySelectorAll(".price").forEach(price => price.innerText = "Inquire for Price");
                 }
             };
             // create an observer to listen for mutations and call the callback function on mutate
