--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -83,8 +83,20 @@
             const callback = (mutationList, observer) => {
                 // if the quantity input is disabled (variant isn't purchasable)
                 if(mutationList[0].target.disabled) {
-                    // change the price label
-                    document.querySelectorAll(".price").forEach(price => price.innerText = "Inquire for Price");
+                    // set the drum title checker to false. 
+                    // this checker is to verify that a variant option has the title "drum"
+                    // we  want this inquire for price on drum variants ONLY
+                    let hasDrumTitle = false;
+                    // loop through the product view form option labels
+                    for (const option of document.querySelectorAll(".form-option")) {
+                        // if the option's title includes the word drum...
+                        if (option.innerText.toLowerCase().includes("drum")) {
+                            // set hasDrumTitle to true
+                            hasDrumTitle = true;
+                        }
+                    }
+                    // change the price label if the variant label contains drum
+                    if (hasDrumTitle) document.querySelectorAll(".price").forEach(price => price.innerText = "Inquire for Price");
                 }
             };
             // create an observer to listen for mutations and call the callback function on mutate
@@ -92,5 +104,7 @@
             // observe the quantity input to mutate on attribute change (style attribute changes visibility)
             observer.observe(document.getElementById("qty[]"), { attributes: true });
         }
+
+        
     </script>
 </html>
